apps/netbox/overlays/understairs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
  namespace: netbox
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
  hostnames:
    - netbox.homelab.blacksd.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbox
          port: 80
